try and ensure the search input doesn't obscure the menu button on smaller devices

--- a/assets/css/components/_search.css
+++ b/assets/css/components/_search.css
@@ -6,13 +6,20 @@
     background: #efefef;
     border: 3px solid #c2bcbc;
     color: #555;
-    min-width: 300px;
     padding: 8px 12px;
     position: absolute;
-    right: 0;
+    right: 10px;
+    width: 200px;
     top: 9px;
 }
 
 .table-search:focus {
     background: #fff;
+}
+
+@media (min-width: 800px) {
+	.table-search {
+	    right: 0;
+    	width: 300px;
+	}
 }
